--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 buildscript {
     ext.kotlin_version = "1.4.20"
     ext.nav_version = "2.3.1"
+    ext.mockk_version="1.11.0"
+    ext.coroutines_version="1.4.3"
+
     repositories {
         google()
         jcenter()
